# libdsac

./: .gitignore  CMakeLists.txt  Doxyfile.cmake  README.md
doc/: index.md
include/dsac/: conversions.h  cordic.h  crossspectrum.h  fake_signals.h  fft.h  fileHandler.h  file_handler.h  fir.h  gnuplot_i.h  logalizit.h  nco.h  piosbr.h  piosbr_mod.h  reg_lin.h  t_pnm.h  tf.h
src/: CMakeLists.txt  README  conversions.c  cordic.c  crossspectrum.c  fake_signals.c  fft.c  fileHandler.c  file_handler.c  fir.c  linspace.c  logalizit.c  logspace.c  nco.c  piosbr.c  piosbr_mod.c  reg_lin.c  t_pnm.c  tf.c
